# agent-digivolve-harness

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CODEX_INTEGRATION.md  IDEA_ESSENCE.md  RELEASING.md
skills/agent-digivolve-harness-operator/: SKILL.md
skills/agent-digivolve-harness-operator/agents/: openai.yaml
skills/agent-digivolve-harness-operator/scripts/: ensure_cli.sh
src/agent_digivolve_harness/: __init__.py  advance.py  agent_prompts.py  baseline.py  casefiles.py  cli.py  confirmation.py  coordination.py  drafting.py  evaluation.py  evaluator_strategy.py  execution.py  experiments.py  git_ops.py  interventions.py  journal.py  loop.py  models.py  openrouter_eval.py  pause.py  readiness.py  reporting.py  resume.py  runners.py  runtime.py  scaffold.py  status_summary.py  step.py  workpack.py  workspace.py  yaml_utils.py
tests/: test_scaffold.py
